--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,15 @@
-# Auto detect text files and perform LF normalization
+##############################################################################
+# 1 ░ Normalise all text files (CRLF↔LF) so diffs are clean across OSes
+##############################################################################
 * text=auto
 
+##############################################################################
+# 2 ░ Unreal Engine binary assets ★ tracked through Git LFS
+##############################################################################
+*.uasset filter=lfs diff=lfs merge=lfs -text
+*.umap   filter=lfs diff=lfs merge=lfs -text
+*.uexp   filter=lfs diff=lfs merge=lfs -text
+*.ubulk  filter=lfs diff=lfs merge=lfs -text
+
+# Static folder
 Content/Static/** filter=lfs diff=lfs merge=lfs -text
