Add Bird and Item Classes

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Dynamic/Maps/LittleMap.LittleMap
+EditorStartupMap=/Game/Dynamic/Maps/LittleMap.LittleMap
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
