Add Simple Character Movement & Animation Blueprint

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Dynamic/Maps/LittleMap.LittleMap
-EditorStartupMap=/Game/Dynamic/Maps/LittleMap.LittleMap
+GameDefaultMap=/Game/Dynamic/Maps/CharLittleMap.CharLittleMap
+EditorStartupMap=/Game/Dynamic/Maps/CharLittleMap.CharLittleMap
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
