--- a/Katsumi.uproject
+++ b/Katsumi.uproject
@@ -71,6 +71,18 @@
 		{
 			"Name": "MetaHumanForMaya",
 			"Enabled": true
+		},
+		{
+			"Name": "MotionTrajectory",
+			"Enabled": true
+		},
+		{
+			"Name": "PoseSearch",
+			"Enabled": true
+		},
+		{
+			"Name": "Chooser",
+			"Enabled": true
 		}
 	]
 }
